# cookiecutter-python

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  CHANGELOG.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.package_name }}/tests/: test_cli.py
